# LocalBrain

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  access.config.json  conftest.py  plugins.yaml  pyproject.toml
scripts/: e2e_test.py
src/chunking/: cdc.py  dedup.py  fingerprint.py
src/core/: models.py  orchestrator.py  pipeline.py  registry.py  scheduler.py  state.py
src/gateway/: main.py  server.py
src/ingress/: identity.py  scope_gate.py  watcher.py
src/janitor/: community_summarizer.py  graph_extractor.py  reindex.py  sync.py  tombstone.py
src/parsers/: _template.py  ai_generic_ext.py  archive_ext.py  audio_ext.py  base.py  chatgpt_ext.py  claude_ext.py  gemini_ext.py  image_ext.py  office_ext.py  pdf_ext.py  text_ext.py
src/retrieval/: __init__.py  communities.py  extractors.py  hybrid_search.py  intent_router.py
src/router_handoff/: backpressure_queue.py  gateway_client.py
src/utils/: config.py  errors.py  logging.py
src/vault/: kuzu_store.py  lance_engine.py  ref_counting.py  schema.py  sqlite_engine.py  subscriptions.py
test_localbrain/: queue.db-shm  queue.db-wal  vault.db-shm  vault.db-wal
tests/test_chunking/: test_cdc.py  test_dedup.py  test_fingerprint.py
tests/test_core/: test_models.py  test_orchestrator.py  test_pipeline.py  test_registry.py  test_scheduler.py
tests/test_gateway/: test_error_handling.py  test_middleware.py  test_server.py
tests/test_ingress/: test_identity.py  test_scope_gate.py  test_watcher.py
tests/test_janitor/: test_reindex.py  test_sync.py  test_tombstone.py
(+23 files in other folders)
