[project]
name = "localbrain"
version = "0.1.0"
description = "High-performance local file ingestion engine — watches, parses, chunks, and stores documents for semantic retrieval"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "lancedb>=0.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyarrow>=18.0.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.43.0",
    "watchfiles>=1.0.0",
    "xxhash>=3.5.0",
]

[project.scripts]
localbrain = "src.gateway.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
